test/cli/test/wildcard_match_label_selector/kyverno-test.yaml
name: wildcard-support-in-matchlabels
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: wildcard-support-in-matchlabels
  resources:
  - my-service-1
  result: pass
  rule: wildcard-label
- kind: Pod
  policy: wildcard-support-in-matchlabels
  resources:
  - my-service-2
  result: pass
  rule: label-end-with-test
- kind: Pod
  policy: wildcard-support-in-matchlabels
  resources:
  - my-service-3
  result: skip
  rule: label-end-with-test
- kind: Pod
  policy: wildcard-support-in-matchlabels
  resources:
  - my-service-4
  result: pass
  rule: label-start-with-test
- kind: Pod
  policy: wildcard-support-in-matchlabels
  resources:
  - my-service-5
  result: skip
  rule: label-start-with-test
