test/cli/test/wildcard_match_label_selector/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: wildcard-support-in-matchlabels
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
          selector:
            matchLabels:
              protected: '*'
    name: wildcard-label
    validate:
      failureAction: Enforce
      message: Using a mutable image tag e.g. 'latest' is not allowed.
      pattern:
        spec:
          containers:
          - image: '!*:latest'
  - match:
      any:
      - resources:
          kinds:
          - Pod
          selector:
            matchLabels:
              protected: '*-test'
    name: label-end-with-test
    validate:
      failureAction: Enforce
      message: Using a mutable image tag e.g. 'latest' is not allowed.
      pattern:
        spec:
          containers:
          - image: '!*:latest'
  - match:
      any:
      - resources:
          kinds:
          - Pod
          selector:
            matchLabels:
              protected: test-*
    name: label-start-with-test
    validate:
      message: Using a mutable image tag e.g. 'latest' is not allowed.
      pattern:
        spec:
          containers:
          - image: '!*:latest'
      failureAction: Enforce
